# openapi-sunset-lint

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/openapi_sunset_lint/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_openapi_sunset_lint.py
